--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="[\w|-]{1,}@[\w|-]{1,}[.][\w|-]{2,}" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
