--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="" placeholder="Имя" required />
+                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][а-яё]*-?[А-ЯЁ]?[а-яё]*" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
                         <input class="form__input" type="text" name="email" pattern="[\w|-]{1,}@[\w|-]{1,}[.][\w|-]{2,}" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="" minlength="" maxlength="18"  required/>
+                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="\+?\d\s?(\(\d{3}\)|\d{3})(-?|\s?)\d{3}(-?|\s?)\d{2}(-?|\s?)\d{2}"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
