--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@
                 <h3>Форма регистрации</h3>
                 <fieldset class="form__fieldset">
                     <div class="form__field">
-                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][а-яё]*-?[А-ЯЁ]?[а-яё]*" placeholder="Имя" required minlength="2" maxlength="20"/>
+                        <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][а-яё]*(-[А-ЯЁ][а-яё]*)?" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="[\w|-]{1,}@[\w|-]{1,}[.][\w|-]{2,}" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="[\w]+[\w|-]+[\w]+@[\w|-]+[.][\w|-]{2,}(.[\w][\w|-]+)?" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="\+?\d\s?(\(\d{3}\)|\d{3})(-?|\s?)\d{3}(-?|\s?)\d{2}(-?|\s?)\d{2}"  required/>
+                        <input class="form__input" type="text" name="tel" placeholder="Телефон" pattern="\+?\d((\d{10})|(((\s\d{3}-)|(\(\d{3}\)(-|\s)?))\d{3}-\d{2}-\d{2}))"  required/>
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="(https?:\/\/)(www\.)?((\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})|[\w\-]+\.[\w\-]+)(:\d{2,5})?(\/[\w\-\/]+#?)?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="(https?:\/\/)(www\.)?((((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9]))|[a-zA-Z\-]+(\.[\w\-]+)(\.[a-zA-Z\-]+)?)(:\d{2,5})?(\/[\w\-\/]+#?)?\/?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="text">Отправить</button>
