--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <input class="form__input" type="text" name="name" pattern="[А-ЯЁ][а-яё]*(-[А-ЯЁ][а-яё]*)?" placeholder="Имя" required minlength="2" maxlength="20"/>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="email" pattern="[\w]+[\w|-]+[\w]+@[\w|-]+[.][\w|-]{2,}(.[\w][\w|-]+)?" placeholder="E-Mail" required />
+                        <input class="form__input" type="text" name="email" pattern="[\w]+([\w|-]?[\w]+)?@[\w|-]+[.][\w|-]{2,}(.[\w][\w|-]+)?" placeholder="E-Mail" required />
                         <span class="form__error">e-mail в формате: students-yandex@yandex.ru</span>
                     </div>
                     <div class="form__field">
@@ -31,7 +31,7 @@
                         <span class="form__error">Недопустимый формат номера</span>
                     </div>
                     <div class="form__field">
-                        <input class="form__input" type="text" name="url" pattern="(https?:\/\/)(www\.)?((((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9]))|[a-zA-Z\-]+(\.[\w\-]+)(\.[a-zA-Z\-]+)?)(:\d{2,5})?(\/[\w\-\/]+#?)?\/?" placeholder="Ваш сайт" required/>
+                        <input class="form__input" type="text" name="url" pattern="(https?:\/\/)(www\.)?((((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9])\.((2[0-5][0-5])|(1\d\d)|(\d\d)|[0-9]))|([\w\-]+(\.[\w\-]+)(\.[a-zA-Z\-]+)*))(:\d{2,5})?(\/[\w\-\/]+#?)?\/?" placeholder="Ваш сайт" required/>
                         <span class="form__error">URL в формате: http://mysite.ru</span>
                     </div>
                     <button class="form__button" type="text">Отправить</button>
